<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">


        <TextView
            android:id="@+id/tv_signin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:fontFamily="@font/poppins_semibold"

            android:text="@string/sign_up_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_signin_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/sign_up_subtitle"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signin_title" />

        <TextView
            android:id="@+id/tv_fullname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/full_name_label"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signin_subtitle" />

        <EditText
            android:id="@+id/et_fullname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6ssp"
            android:background="@drawable/rounded_corner_10dp"
            android:backgroundTint="#F6F6F6"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/enter_full_name_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"

            android:textColorHint="@color/color_78828A"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/tv_fullname_label"
            tools:layout_editor_absoluteX="24dp" />

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/email_address_label"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_fullname_label" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6ssp"
            android:background="@drawable/rounded_corner_10dp"
            android:backgroundTint="#F6F6F6"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/enter_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"

            android:textColorHint="@color/color_78828A"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_label"
            tools:layout_editor_absoluteX="24dp" />

        <TextView
            android:id="@+id/tv_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/password_label"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <RelativeLayout
            android:id="@+id/rl_password_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner_10dp"
            android:backgroundTint="#F6F6F6"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_label">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/iv_toggle_password"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/enter_password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_78828A"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:id="@+id/iv_toggle_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/toggle_password_visibility"
                android:padding="12dp"
                android:src="@drawable/ic_visibility_off" />
        </RelativeLayout>


        <TextView
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_corner_12dp_stroke"
            android:backgroundTint="@color/main_color"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingTop="@dimen/_8ssp"
            android:paddingBottom="@dimen/_7ssp"
            android:text="@string/create_account_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_password_container" />


        <LinearLayout
            android:id="@+id/ll_separator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or_sign_in_with" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_social_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_separator">

            <ImageButton
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corner_6dp"
                android:backgroundTint="#F6F6F6"
                android:contentDescription="@string/google_button_desc"
                android:padding="12dp"
                android:src="@drawable/ic_google" />

            <ImageButton
                android:id="@+id/btn_apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corner_6dp"
                android:backgroundTint="#F6F6F6"
                android:contentDescription="@string/apple_button_desc"
                android:padding="12dp"
                android:src="@drawable/ic_apple" />

            <ImageButton
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_6dp"
                android:backgroundTint="#F6F6F6"
                android:contentDescription="@string/facebook_button_desc"
                android:padding="12dp"
                android:src="@drawable/ic_facebook" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_in_terms"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_social_login"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>