<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".ui.login.EnterOtpActivity">

    <ImageView
        android:id="@+id/back_arrow_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:contentDescription="@string/back_button_desc"
        android:src="@drawable/ic_back"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_otp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/otp_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_arrow_otp" />

    <TextView
        android:id="@+id/tv_otp_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/otp_subtitle"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_title" />

    <LinearLayout
        android:id="@+id/ll_otp_boxes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_subtitle">

        <EditText
            android:id="@+id/et_otp_1"
            style="@style/OtpEditTextStyle" />

        <EditText
            android:id="@+id/et_otp_2"
            style="@style/OtpEditTextStyle" />

        <EditText
            android:id="@+id/et_otp_3"
            style="@style/OtpEditTextStyle" />

        <EditText
            android:id="@+id/et_otp_4"
            style="@style/OtpEditTextStyle"
            android:background="@drawable/otp_box_background_focused" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24ssp"
        android:background="@drawable/rounded_corner_12dp_stroke"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingTop="@dimen/_8ssp"
        android:paddingBottom="@dimen/_7ssp"
        android:text="@string/continue_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_otp_boxes" />

    <LinearLayout
        android:id="@+id/ll_resend_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/didnt_receive_code"
            android:textColor="#7C7E80" />

        <TextView
            android:id="@+id/tv_resend_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/resend_code"

            android:textColor="@color/main_color"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>